--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
   <main>
     <section id="about-me">
       <h1>About Me</h1>
-      <p>Hello! I’m Shruti Patil, studying in firt ywae Information Technology , creating intuitive user experiences, and solving complex problems. I love learning new technologies and applying them to create efficient solutions.</p>
+      <p>Hello! I’m Shruti Patil, studying in FY BE TECH Information Technology , creating intuitive user experiences, and solving complex problems. I love learning new technologies and applying them to create efficient solutions.</p>
     </section>
 
     <section id="projects">
